==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/tiva/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num)      (_module_num - 1)
#define HAL_LL_ADC_RCGCADC_R0_BIT_POS           (0)
#define HAL_LL_ADC_RCGCADC_R0_BIT_MSK           (0x1UL << HAL_LL_ADC_RCGCADC_R0_BIT_POS)
#define HAL_LL_ADC_RCGCADC_R1_BIT_POS           (1)
#define HAL_LL_ADC_RCGCADC_R1_BIT_MSK           (0x1UL << HAL_LL_ADC_RCGCADC_R1_BIT_POS)
#define HAL_LL_ADC_CTL_VREF0_BIT                (0)
#define HAL_LL_ADC_CTL_VREF0_BIT_MASK           (1UL << HAL_LL_ADC_CTL_VREF0_BIT)
#define HAL_LL_ADC_CTL_VREF1_BIT                (1)
#define HAL_LL_ADC_CTL_VREF1_BIT_MASK           (1UL << HAL_LL_ADC_CTL_VREF1_BIT)
#define HAL_LL_ADC_CTL_VREF_MASK                (HAL_LL_ADC_CTL_VREF0_BIT_MASK | HAL_LL_ADC_CTL_VREF1_BIT_MASK)
#define HAL_LL_ADC_EMUX_SS3_TRIGGER_SELECT      (0xF000)
#define HAL_LL_ADC_ACTSS_SS3_ENABLE_BIT         (3)

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input,
                                        hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id){
    uint8_t pin_check_result;
    hal_ll_adc_pin_id index = {HAL_LL_PIN_NC};

    if ( (pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_12BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input ){
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;
        case HAL_LL_ADC_VREF_EXTERNAL: // DEFAULT CASE
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin ){
        hal_ll_adc_map_pin( pin_check_result, &index );
        handle_map[pin_check_result].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;

    handle_map[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_module_configure_adc( handle_t *handle ){
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    hal_ll_adc_handle_register_t *hal_handle = (hal_ll_adc_handle_register_t *)*handle;
    uint8_t pin_check_result = hal_ll_adc_hw_specifics_map_local->module_index;

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );
    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;
    hal_ll_module_state[pin_check_result].init_ll_state = true;
    hal_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution(handle_t *handle, hal_ll_adc_resolution_t resolution){
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);

    if( NULL == low_level_handle->hal_ll_adc_handle ) {
        return HAL_LL_MODULE_ERROR;
    }

    low_level_handle->init_ll_state = false;

    switch( resolution ) {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_12BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_vref_input(handle_t *handle, hal_ll_adc_voltage_reference_t vref_input) {
    hal_ll_adc_handle_register_t *low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);

    if( NULL == low_level_handle->hal_ll_adc_handle ) {
        return HAL_LL_MODULE_ERROR;
    }

    low_level_handle->init_ll_state = false;

    switch( vref_input ) {
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf ){
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *hal_ll_hw_reg = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base ;

    if( NULL == low_level_handle->hal_ll_adc_handle  ) {
        return HAL_LL_MODULE_ERROR;
    }

    // Disable SS3 before changing settings.
    clear_reg_bit( &hal_ll_hw_reg->actss, HAL_LL_ADC_ACTSS_SS3_ENABLE_BIT );

    /* Enable sample sequence 3 with a processor signal trigger. Sequence 3
     * will do a single sample when the processor sends a signal to start the
     * conversion. Each ADC module has 4 programmable sequences, sequence 0
     * to sequence 3. This library is arbitrarily using sequence 3.
     */
    hal_ll_hw_reg->emux &= ~HAL_LL_ADC_EMUX_SS3_TRIGGER_SELECT;

    // SS3 highest priority, followed by SS2, SS1 and SS0 respectively.
    hal_ll_hw_reg->sspri = HAL_LL_ADC_SSPRI_RESET_STATE;

    // Channel number for sampling data.
    hal_ll_hw_reg->ssmux3 = hal_ll_adc_hw_specifics_map_local->channel;

    if (hal_ll_adc_hw_specifics_map_local->channel > HAL_LL_ADC_CHANNEL_15)
        set_reg_bit( &hal_ll_hw_reg->ssemux3, HAL_LL_ADC_SSEMUX_EMUX0_BIT );
    else
        clear_reg_bit( &hal_ll_hw_reg->ssemux3, HAL_LL_ADC_SSEMUX_EMUX0_BIT );

    set_reg_bit( &hal_ll_hw_reg->ssctl3, HAL_LL_ADC_SSCTL3_END0_BIT );
    set_reg_bit( &hal_ll_hw_reg->ssctl3, HAL_LL_ADC_SSCTL3_IE0_BIT );
    clear_reg_bit( &hal_ll_hw_reg->ssop3, HAL_LL_ADC_SSOP3_S0DCOP_BIT );

    set_reg_bit( &hal_ll_hw_reg->actss, HAL_LL_ADC_ACTSS_ASEN3_BIT );
    // Clear all interrupts and raw interrupts before sampling.
    hal_ll_hw_reg->isc |= HAL_LL_ADC_ISC_INTERRUPT_STATUS_MASK;
    // Start conversion on SS3.
    set_reg_bit( &hal_ll_hw_reg->pssi, HAL_LL_ADC_PSSI_SS3_BIT );
    // Wait for conversion to be completed.
    while( !check_reg_bit( &hal_ll_hw_reg->ris, HAL_LL_ADC_RIS_INR3_BIT ) );

    // Conversion result from SS3.
    *readDatabuf = hal_ll_hw_reg->ssfifo3;

    return HAL_LL_ADC_SUCCESS;
}

static void hal_ll_adc_map_pin( uint8_t module_index, hal_ll_adc_pin_id *index ) {
    // Map new pins.
    hal_ll_adc_hw_specifics_map[module_index].pin = hal_ll_analog_in_register_list[ index->pin_an[module_index] ].pin;
    hal_ll_adc_hw_specifics_map[module_index].channel = hal_ll_analog_in_register_list[ index->pin_an[module_index] ].channel;
}

static void hal_ll_adc_hw_init(hal_ll_adc_hw_specifics_map_t *map) {
    hal_ll_adc_base_handle_t *hal_ll_hw_reg = ( hal_ll_adc_base_handle_t *)map->base;

    // Set Vref.
    switch ( map->vref_input ) {
        case HAL_LL_ADC_VREF_EXTERNAL :
            hal_ll_hw_reg->ctl |= HAL_LL_ADC_CTL_VREF_MASK;
            break;
        case HAL_LL_ADC_VREF_INTERNAL :
            hal_ll_hw_reg->ctl &= ~HAL_LL_ADC_CTL_VREF_MASK;
            break;

        default :
            /* In case some Vref configuration is received, that is not valid for this hardware
             * a default configuration is set up, in this case Vref internal. */
            hal_ll_hw_reg->ctl &= ~HAL_LL_ADC_CTL_VREF_MASK;
            break;
    }
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {
    uint32_t port;

    adc_clock_enable( map->module_index, true );

    port = hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) );
    hal_ll_gpio_analog_input( &port , hal_ll_gpio_pin_mask( map->pin ) );

    hal_ll_adc_hw_init( map );
}
